src/test/test-models/good/mcmc/hmc/common/gauss3D.stan
parameters {
  array[3] real x;
}
model {
  x ~ normal(0, 1);
}

