src/test/test-models/bad/data_index/non_data_index1.stan
parameters {
  real y[3];

}
transformed parameters {
  real z[size(y)];
}
